<resources>
    <string name="app_name">My Mall</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="home_second">Home Second</string>
    <string name="my_mall">My Mall</string>
    <string name="my_orders">My Orders</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="description" />
    <string name="specification" />
    <string name="other_details" />


    <string-array name="tunisia_states">
        <item> Tunis</item>
        <item> Ariana</item>
        <item> Ben Arous</item>
        <item> Manouba</item>
        <item> Nabeul</item>
        <item> Zaghouan</item>
        <item> Bizerte </item>
        <item> Beja </item>
        <item> Jendouba </item>
        <item> Kef </item>
        <item> Siliana</item>
        <item> Sousse</item>
        <item> Monastir</item>
        <item> Mahdia</item>
        <item> Sfax</item>
        <item> Kairouan</item>
        <item> Kasserine</item>
        <item> Sidi Bouzid</item>
        <item> Gabés</item>
        <item> Mednine</item>
        <item> Tataouine</item>
        <item> Gafsa</item>
        <item> Tozeur</item>
        <item> Kebili</item>
    </string-array>
</resources>
