<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group>
        <item
            android:id="@+id/nav_my_mall"
            android:icon="@mipmap/my_mall"
            android:title="@string/my_mall"/>
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@mipmap/my_orders"
            android:title="@string/my_orders"/>
        <item
            android:id="@+id/nav_my_rewards"
            android:icon="@mipmap/my_rewards"
            android:title="@string/my_rewards"/>
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@mipmap/my_cart"
            android:title="@string/my_cart"/>
        <item
            android:id="@+id/nav_my_wishlist"
            android:icon="@mipmap/my_wishlist"
            android:title="@string/my_wishlist"/>
        <item
            android:id="@+id/nav_my_account"
            android:icon="@mipmap/my_account"
            android:title="@string/my_account"/>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@mipmap/sign_out"
            android:title="@string/sign_out"/>
    </group>

</menu>